flux/apps/weave-gitops/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-cilium
  namespace: weave-gitops
spec:
  ingressClassName: cilium
  rules:
    - host: gitops.dev-cluster.local  # Will be patched per environment
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
